# devops-engineer-from-scratch-project-313

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  config.py  database.db  database.py  docker-compose.yml  frontend.Dockerfile  main.py  models.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  schemas.py  start.sh  supervisord.conf
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  models.py  routes.py  start.sh  static_routes.py
app/routes/: health.py  links.py
nginx/: nginx.conf
tests/: conftest.py  test_health.py  test_links.py  test_main.py  test_models.py
